# tsugou

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  brainstorm.md  build.ps1  build.sh  commands.md  dev.md  install.sh  run  steps.md  structures.md  td_1_0_0.md  tsu
.cache/clangd/index/: command.hpp.203022588974D7C7.idx  commands.hpp.E7289C94ED6FF309.idx  ctx.cpp.856D3FC7E7532C29.idx  ctx.hpp.1A7471FFD938DFB7.idx  exception.cpp.55A2FC2ED9A69EF0.idx  exception.hpp.25227F94F5B0981C.idx  exec.cpp.079B6EA5A3588D38.idx  help.cpp.1B6BE44B3A8F23B4.idx  init.cpp.0DB7879CBFF1AD9D.idx  json.hpp.6047412D979C1CAE.idx  main.cpp.2898D175F1B55E24.idx  (+1 more)
.tsu/: config.json
docs/: commands.md  concepts.md  index.md
docs/commands/: commit.md  create.md  init.md
include/PicoSHA2/: picosha2.h
include/prm/: command.hpp  core.hpp  ctx.hpp  utils.hpp
include/tsu/: command.hpp  core.hpp  crypto.hpp  ctx.hpp  utils.hpp  version.hpp.in
include/tsugou/: Dispatcher.hpp  command.hpp  commands.hpp  commit.hpp  ctx.hpp  defs.hpp  exception.hpp  sha2_256.hpp  user.hpp  utils.hpp  version.hpp
prototype/: prm  tsu
prototype/.prm/: config.json
prototype/tsugou/: __init__.py  commit.py  config.py  user.py  utils.py
src/: Dispatcher.cpp  build_cpp.cpp  core.cpp  ctx.cpp  exception.cpp  main.cpp  sha256_file.cpp  utils.cpp
src/cmds/: init.cpp
src/commands/: commit.cpp  exec.cpp  help.cpp  init.cpp  run.cpp  switch.cpp  version.cpp
src/types/: author.cpp  commit.cpp  user.cpp
test/: .gitignore  a.out  ignore.cpp  main.py
tsugou/: config.py  user.py
(+2 files in other folders)
